# allusion

./: .gitignore  LICENSE  README.md  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: black.yml
allusion/: __main__.py  configuration.py  constants.py  main.py  scraper.py  utils.py
allusion/cli/: __init__.py  cli.py  cli_options.py  config_commands.py  list_commands.py  run_commands.py
data/: config_template.json
