[metadata]
name =  allusion
version = attr: allusion.__version__
license = MIT
license_files = LICENSE
author = erdieee
home_page = https://github.com/erdieee/analyzef1
description = Sport betting scraper
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >= 3.8

[options.entry_points]
console_scripts =
    allusion = allusion.main:main